# finam-protos

./: .gitignore  README.md  gen_proto.py  generate_proto_files.py  generate_protobuf.py  pyproject.toml  setup.py  test.ipynb
finam_grpc/grpc/tradeapi/v1/: side_pb2.py  side_pb2_grpc.py  trade_pb2.py  trade_pb2.pyi  trade_pb2_grpc.py
finam_grpc/grpc/tradeapi/v1/accounts/: accounts_service_pb2.py  accounts_service_pb2.pyi  accounts_service_pb2_grpc.py
finam_protos/google/api/: auth_pb2_grpc.py  backend_pb2_grpc.py  billing_pb2_grpc.py  client_pb2.py  client_pb2.pyi  client_pb2_grpc.py  config_change_pb2_grpc.py  consumer_pb2_grpc.py  context_pb2_grpc.py  control_pb2_grpc.py  distribution_pb2.pyi  distribution_pb2_grpc.py  documentation_pb2_grpc.py  endpoint_pb2_grpc.py  error_reason_pb2_grpc.py  field_behavior_pb2_grpc.py  field_info_pb2_grpc.py  httpbody_pb2_grpc.py  label_pb2_grpc.py  launch_stage_pb2_grpc.py  log_pb2_grpc.py  logging_pb2_grpc.py  metric_pb2.pyi  metric_pb2_grpc.py  monitored_resource_pb2_grpc.py  monitoring_pb2_grpc.py  policy_pb2_grpc.py  quota_pb2_grpc.py  resource_pb2_grpc.py  routing_pb2_grpc.py  service_pb2_grpc.py  source_info_pb2_grpc.py  system_parameter_pb2_grpc.py  usage_pb2_grpc.py  visibility_pb2_grpc.py
finam_protos/google/protobuf/: api_pb2_grpc.py  descriptor_pb2.py  descriptor_pb2_grpc.py  field_mask_pb2_grpc.py  source_context_pb2_grpc.py  type_pb2_grpc.py
finam_protos/google/type/: calendar_period_pb2_grpc.py  color_pb2_grpc.py  date_pb2_grpc.py  datetime_pb2.pyi  datetime_pb2_grpc.py  dayofweek_pb2_grpc.py  expr_pb2_grpc.py  fraction_pb2_grpc.py  interval_pb2.pyi  interval_pb2_grpc.py  latlng_pb2_grpc.py  localized_text_pb2_grpc.py  money_pb2_grpc.py  month_pb2_grpc.py  phone_number_pb2_grpc.py  postal_address_pb2_grpc.py  quaternion_pb2_grpc.py  timeofday_pb2_grpc.py
finam_protos/grpc/tradeapi/v1/: __init__.py  side_pb2.py  side_pb2.pyi  side_pb2_grpc.py  trade_pb2.py  trade_pb2.pyi  trade_pb2_grpc.py
proto/grpc/tradeapi/v1/: side.proto  trade.proto
protos/finam_grpc/finam_grpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+72 files in other folders)
