[project]
name = "finam-protos"
version = "1.0.4"
description = "Finam gRPC API protos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.72.0",
    "googleapis-common-protos>=1.72.0",
    "protobuf>=6.33.2",
    # для билда
    # "grpcio-tools>=1.62.3",
    # "grpcio-status>=1.62.3",
    # "grpcio-reflection>=1.62.3",
    # "grpcio-health-checking>=1.62.3",
    # "loguru",
    # "ipykernel>=7.1.0",
]

[build-system]
requires = [
    "setuptools>=68",
    "grpcio-tools>=1.62.3",
    "grpcio-status>=1.62.3",
    "grpcio-reflection>=1.62.3",
    "grpcio-health-checking>=1.62.3",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finam_protos*"]

[tool.uv]
package = true
