[project]
name = "finam-protos"
version = "1.0.5"
description = "Finam gRPC API protos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio",
    "googleapis-common-protos",
    "protobuf",
    "types-protobuf",
    "grpcio-tools",
]

[build-system]
requires = [
    "setuptools>=68",
    "grpcio-tools>=1.62.3",
    "grpcio-status>=1.62.3",
    "grpcio-reflection>=1.62.3",
    "grpcio-health-checking>=1.62.3",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["finam_protos*"]

[tool.uv]
package = true
